# pycheck

./: Dockerfile  README.md  check.py  docker-compose.yml  flake8  isort.cfg  mypy.ini  pycheck  pyproject.toml  setup.py
pycheck/: __main__.py  main.py  pycheck.py
pycheck/data/: flake8  pyproject.toml
tests/: test_import.py
