[tool.poetry]
name = "pycheck"
version = "0.1.0"
description = "Check Python code"
authors = ["Braden Pellett <git@dabrado.net>"]

[tool.poetry.dependencies]
python = "^3.10"
black = "^23.10.1"
flake8 = "^6.1.0"
flake8-bugbear = "^23.9.16"
inotify-simple = "^1.3.5"
isort = "^5.12.0"
mypy = "^1.6.1"
pytest = "^7.4.3"
tomlkit = "^0.12.1"
pytest-asyncio = "^0.21.1"

[tool.poetry.dev-dependencies]

[tool.poetry.scripts]
pycheck = "pycheck:main"

[tool.isort]
profile = "black"
skip_gitignore = true

[tool.pytest.ini_options]
testpaths = "tests"
asyncio_mode = "auto"
markers = [
    "slow: marks tests as slow",
]

[tool.mypy]
files = ["."]

# Disallow dynamic typing
disallow_any_unimported = true
disallow_any_generics = true
disallow_subclassing_any = true

# Untyped definitions and calls
disallow_untyped_defs = true
check_untyped_defs = true

# Configuration warnings
warn_redundant_casts = true
warn_unused_ignores = true

# Miscellaneous strictness flags
no_implicit_reexport = true

[build-system]
requires = ["setuptools", "poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
